--- a/web/ui/css/57oj-main.css
+++ b/web/ui/css/57oj-main.css
@@ -3,26 +3,34 @@
 	background-attachment: fixed;
 	background-size:cover;
 }
+.nav-header{
+	width: 100%;
+}
 .oj57-frame{
 	width: 100%;
+	min-width: 654px;
 }
 .oj57-container {
 	border-radius:10px;
-	width: 1000px;
+	width: 100%;
+	max-width: 1000px;
 	background-color:rgba(255,255,255,0);
 	margin-left:auto;
 	margin-right:auto;
-	margin-top: 45px;
+	margin-top: 20px;
+}
+.oj57-container .container{
+	border-radius:8px;
 }
 .oj57-container .header{
 	width: 100%;
 }
 .oj57-container .header .left{
-	width: 600px;
+	width: 60%;
 	height: 310px;
 }
 .oj57-container .header .right{
-	width: 360px;
+	width: 38%;
 }
 .oj57-container .interaction{
 	margin-top: 15px;
@@ -31,18 +39,20 @@
 }
 .oj57-container .interaction .notice{
 	float: right;
-	width: 620px;
+	width: 62%;
 	height: 160PX;
 }
-.oj57-container .interaction .notice h3{
-	margin-left: 220px;
+.oj57-container .interaction .notice .notice-h3{
+	width:120px;
+	margin-left:auto;
+	margin-right:auto;
 }
 .oj57-container .interaction .notice .text-container{
 	font-size:16px;
 }
 .oj57-container .interaction .search{
 	float: left;
-	width: 365px;
+	width: 36%;
 	height: 160PX;
 }
 .oj57-container .interaction .search .name{
@@ -50,7 +60,7 @@
 	height: 60px;
 }
 .oj57-container .interaction .search .name input{
-	width: 260px;
+	width: 70%;
 	float: left;
 }
 .oj57-container .interaction .search .name button{
@@ -61,7 +71,7 @@
 	height: 50px;
 }
 .oj57-container .interaction .search .id input{
-	width: 260px;
+	width: 70%;
 	float: left;
 }
 .oj57-container .interaction .search .id button{
@@ -78,7 +88,7 @@
 	font-size: 18px;
 }
 .oj57-container .interaction-two .contest{
-	width: 800px;
+	width: 100%;
 }
 .oj57-container .interaction-two .contest .panel-adjustment{
 	padding-bottom: 0px;
@@ -104,19 +114,20 @@
 	font-weight: 500;
 }
 .oj57-container .tr-head{
-	width: 900px;
+	width: 90%;
 	margin-left:auto;
 	margin-right:auto;
 	padding-top: 10px;
 }
 .oj57-footer{
 	width: 100%;
-	min-width: 1000px;
 	height: 150px;
 	background-color:#222222;
+	margin-top: 20px;
 }
 .oj57-footer .container{
-	width: 1000px;
+	width: 100%;
+	max-width: 1000px;
 	height: 150px;
 }
 .oj57-footer .container-left{
